--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
   --speed: 500ms;
+  --secondaryColor: #c9ffed;
+}
+
+[placeholder]:empty:before {
+  content: attr(placeholder);
+  color: lightgrey;
+  cursor: text; 
 }
 
 .displayButtons {
@@ -13,13 +20,15 @@
 
 .previewMode {
   display: none;
-  color: #B5FFE6;
+  color: var(--secondaryColor);
 }
 
 .preview {
   margin-top: auto;
   margin-bottom: auto;
   color: aquamarine;
+  /* text-shadow: 1px 1px 1px white; */
+  font-size: 125%;
   border: none;
   background-color: rgba(0,0,0,0);
 }
@@ -36,7 +45,7 @@
   display: flex;
   padding: 1%;
   justify-content: space-between;
-  background-color: #B5FFE6;
+  background-color: var(--secondaryColor);
 }
 
 .dropdown {
@@ -54,7 +63,7 @@
 
 .dropdown:hover {
   /* transform: translate(-45%); */
-  background-color: #B5FFE6;
+  background-color: var(--secondaryColor);
 }
 
 .menuItem {
@@ -65,6 +74,7 @@
 }
 
 .dropdownMenuItems {
+  z-index: 10;
   position: absolute;
 }
 
@@ -84,7 +94,7 @@
 }
 
 .addButtonContainer {
-  background-color: #B5FFE6;
+  background-color: var(--secondaryColor);
 }
 
 .input {
@@ -93,4 +103,118 @@
   background-color: rgba(0,0,0,0);
   margin-top: 3%;
   margin-bottom: auto;
+  white-space: pre-wrap;  /* <-- THIS PRESERVES THE LINE BREAKS */
+}
+
+.editModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background-color:  var(--secondaryColor);
+  transition-duration: 200ms;
+  z-index: 10;
+  width: 60%;
+  height: 40%;
+}
+
+.editModalActive {
+  position: fixed;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 5;
+  pointer-events: none;
+}
+
+.overlayActive {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.addButtonOverlayActive {
+  opacity: 0;
+}
+
+.addImageOverlay {
+  z-index: 11;
+}
+
+.checkboxContainer {
+  --checkboxWidth: 40px;
+  --checkboxHeight: calc(var(--checkboxWidth) / 2);
+  --border-radius: calc(var(--checkboxHeight) / 2);
+  width: 10%;
+  display: block;
+  cursor: pointer;
+  /* margin: 1%;
+  padding: 1%; */
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkboxFill {
+  position: relative;
+  width: var(--checkboxWidth);
+  height: var(--checkboxHeight);
+  border-radius: var(--border-radius);
+  background-color: white;
+  transition: background 0.2s;
+}
+
+.checkbox:checked ~ .checkboxFill {
+  background: aquamarine;
+}
+
+.checkboxFill::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: var(--checkboxHeight);
+  width: var(--checkboxHeight);
+  background: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+  border-radius: var(--border-radius);
+  transition: transform 0.2s;
+}
+
+.checkbox:checked ~ .checkboxFill::after {
+  transform: translateX(var(--checkboxHeight))
+}
+
+.textAlignIcon {
+  margin: 1%;
+  border-radius: 0;
+  background-color: rgba(0,0,0,0);
+}
+
+.checkbox:checked ~ .textAlignIcon {
+  color: white;
+}
+
+.textAlignContainer {
+  color: aquamarine;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.stylesBorderContainer {
+  display: flex;
+  margin: 1%;
+  padding: 1%;
+  justify-content: center;
+  color: aquamarine;
+  margin-bottom: 3%;
+  margin-top: 3%;
 }
