--- a/web-maker/src/App.css
+++ b/web-maker/src/App.css
@@ -126,6 +126,11 @@ input[type=number] {
   white-space: pre-wrap;  /* <-- THIS PRESERVES THE LINE BREAKS */
 }
 
+.loginInput {
+  margin-bottom: 3%;
+  margin-top: 3%;
+}
+
 .editModal {
   position: fixed;
   top: 50%;
@@ -141,6 +146,16 @@ input[type=number] {
 .editModalActive {
   position: fixed;
   transform: translate(-50%, -50%) scale(1);
+}
+
+.loginModal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */ 
+  padding: 1%;
+  width: 80%;
+  height: 80%;
 }
 
 .overlay {
