Fix bug in INsertTOkenObject web-maker-server

--- a/web-maker/src/App.css
+++ b/web-maker/src/App.css
@@ -283,6 +283,11 @@ input[type=number] {
   color: aquamarine;
 }
 
+.loginModalContainer {
+  color: aquamarine;
+}
+
+
 .imageModalSelect {
   display: flex;
   flex-direction: column;
