--- a/web-maker/src/App.css
+++ b/web-maker/src/App.css
@@ -126,9 +126,18 @@ input[type=number] {
   white-space: pre-wrap;  /* <-- THIS PRESERVES THE LINE BREAKS */
 }
 
+
+
 .loginInput {
-  margin-bottom: 3%;
-  margin-top: 3%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  margin-left: 1%;
+  margin-right: 1%;
+  scale: 110%;
+}
+
+.loginInput[placeholder] {
+  color: aquamarine;
 }
 
 .editModal {
@@ -152,7 +161,7 @@ input[type=number] {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */ 
+  justify-content: center; 
   padding: 1%;
   width: 80%;
   height: 80%;
@@ -287,6 +296,19 @@ input[type=number] {
   color: aquamarine;
 }
 
+.loginButton {
+  background-color: aquamarine;
+  color: var(--secondaryColor);
+  padding: 1%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  border: 1px solid aquamarine;
+}
+
+.loginButton:hover {
+  background-color: var(--secondaryColor);
+  color: aquamarine;
+}
 
 .imageModalSelect {
   display: flex;
@@ -300,7 +322,7 @@ input[type=number] {
   border-bottom: 1px solid;
 }
 
-.imageModalInformationDiv {
+.informationDiv {
   /* border-bottom: solid 1px; */
   background-color: aquamarine;
   color: var(--secondaryColor);
@@ -310,6 +332,21 @@ input[type=number] {
   padding: 1%;
 }
 
+.alertDiv  {
+  background-color: red;
+  color: white;
+}
+
 /* .imageModalTable {
   margin: auto;
 } */
+
+.hide {
+  transition-duration: 0.5s;
+  transform: scaleY(0)
+}
+
+.unhide {
+  transition-duration: 0.5s;
+  transform: scaleY(1)
+}
