--- a/web-maker/src/App.css
+++ b/web-maker/src/App.css
@@ -335,6 +335,10 @@ input[type=number] {
 .alertDiv  {
   background-color: red;
   color: white;
+  padding: 1%;
+  margin: 1%;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 /* .imageModalTable {
