--- a/web-maker/src/App.css
+++ b/web-maker/src/App.css
@@ -326,6 +326,7 @@ input[type=number] {
 
 .informationDiv {
   /* border-bottom: solid 1px; */
+  position: absolute;
   background-color: aquamarine;
   color: var(--secondaryColor);
   margin: 1%;
@@ -335,6 +336,7 @@ input[type=number] {
 }
 
 .alertDiv  {
+  position: absolute;
   background-color: red;
   color: white;
   padding: 1%;
