--- a/web-maker/src/App.css
+++ b/web-maker/src/App.css
@@ -79,7 +79,8 @@ input[type="number"] {
 
 .dropdown {
 	/* transform: translate(-45%); */
-	background-color: var(--primaryColor);
+	background-color: var(--secondaryColor);
+	color: var(--primaryColor);
 	padding: 1rem;
 	overflow: hidden;
 	transition-duration: 0.2s;
